force-app/main/default/objects/AttachmentLink__c/AttachmentLink__c.object-meta.xml
<CustomObject>
    <description
  >Vínculo genérico de anexo/arquivo a qualquer registro (via SObjectId__c). Guarda a URL retornada pela integração ExternalArchive e/ou a referência interna do arquivo.</description>
    <label>Attachment Link</label>
    <nameField>
        <displayFormat>AL-{00000000}</displayFormat>
        <label>Attachment Link Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attachment Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>