force-app/main/default/objects/AttachmentLink__c/fields/AttachmentDescription__c.field-meta.xml
<CustomField>
    <fullName>AttachmentDescription__c</fullName>
    <description>Descrição/nome do arquivo anexado.</description>
    <label>Descrição do Anexo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>