force-app/main/default/objects/AttachmentLink__c/fields/AttachmentURL__c.field-meta.xml
<CustomField>
    <fullName>AttachmentURL__c</fullName>
    <description
  >URL pública do arquivo retornada pela integração ExternalArchive.</description>
    <label>URL do Anexo</label>
    <type>Url</type>
</CustomField>