force-app/main/default/objects/AttachmentLink__c/fields/ContentDocumentId__c.field-meta.xml
<CustomField>
    <fullName>ContentDocumentId__c</fullName>
    <description
  >Id do ContentDocument do arquivo armazenado internamente, quando aplicável.</description>
    <label>Content Document Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>