force-app/main/default/objects/AttachmentLink__c/fields/FileName__c.field-meta.xml
<CustomField>
    <fullName>FileName__c</fullName>
    <description>Nome do arquivo com extensão (ex.: laudo.pdf).</description>
    <label>Nome do Arquivo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>