force-app/main/default/objects/AttachmentLink__c/fields/FileType__c.field-meta.xml
<CustomField>
    <fullName>FileType__c</fullName>
    <description>Extensão/tipo do arquivo (ex.: pdf, png, jpg) usada pelo preview para escolher iframe vs imagem.</description>
    <label>Tipo do Arquivo</label>
    <length>20</length>
    <type>Text</type>
</CustomField>