force-app/main/default/objects/AttachmentLink__c/fields/InternalAttachmentURL__c.field-meta.xml
<CustomField>
    <fullName>InternalAttachmentURL__c</fullName>
    <description
  >URL interna do Salesforce (download do ContentDocument) quando há ContentVersion criado.</description>
    <label>URL Interna do Anexo</label>
    <type>Url</type>
</CustomField>