force-app/main/default/objects/AttachmentLink__c/fields/SObjectId__c.field-meta.xml
<CustomField>
    <fullName>SObjectId__c</fullName>
    <description
  >Id do registro pai ao qual o anexo está vinculado (ex.: HelpDeskMessage__c.Id). Vínculo polimórfico.</description>
    <label>SObject Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>