force-app/main/default/objects/AttachmentLink__c/fields/SObjectType__c.field-meta.xml
<CustomField>
    <fullName>SObjectType__c</fullName>
    <description
  >API name do objeto pai (ex.: HelpDeskMessage__c) para consulta/filtragem dos anexos.</description>
    <label>SObject Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>